--- a/css/style.css
+++ b/css/style.css
@@ -420,3 +420,16 @@ margin-bottom: 34px;
 .featured a:hover {
     opacity: 1;
 }
+
+a {
+    text-decoration: none;
+    transition: all 0.3s;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+.btn:hover {
+    text-decoration: none;
+    opacity: .9;
+}
